--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,1 +1,29 @@
-@import "{{ site.theme }}";
+@import "slate";
+
+/*
+header {
+    background-color: #000000;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  nav ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  nav ul li {
+    display: inline;
+    margin: 0 15px;
+  }
+  
+  nav ul li a {
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: bold;
+  }
+  
+  nav ul li a:hover {
+    color: #0090ff; 
+  }
+ */  
